# wincredentials-rs

./: Cargo.toml  README.md
bindings/: .gitignore  Cargo.toml  build.rs
src/: credential.rs  lib.rs  tests.rs
