[package]
name = "wincredentials"
description = "A wrapper around the Win32 API credential management functions."
version = "0.2.0"
edition = "2024"
repository = "https://github.com/karashiiro/wincredentials-rs"
license = "MIT"
keywords = ["credentials", "windows"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "^0.62.2"
wincredentials-bindings = { path = "bindings", version = "0.1.0" }
widestring = "^1.2.1"
