[package]
name = "wincredentials-bindings"
description = "Win32 API bindings for the wincredentials crate."
version = "0.1.0"
edition = "2018"
repository = "https://github.com/karashiiro/wincredentials-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "0.21.1"

[build-dependencies]
windows = "0.21.1"
